--- a/portfolio.html
+++ b/portfolio.html
@@ -5,112 +5,151 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <!--Шапка-->
-    <header>
-      <a href="./index.html" lang="en">WebStudio</a>
+    <header class="header">
+      <a class="logo link shadow" href="./index.html" lang="en"
+        >Web<span class="logo-dark">Studio</span></a
+      >
       <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="list">
+          <li><a class="menu link" href="./index.html">Студия</a></li>
+          <li><a class="menu link active" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="menu link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="contacts">
+        <li>
+          <a class="contacts-link link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li>
+          <a class="contacts-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
       </ul>
     </header>
 
     <main>
       <!--Главная страница Портфолио-->
-      <h1>Галерея</h1>
+      <h1 class="visually-hidden">Галерея</h1>
       <section>
-      <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
-        <li>
-          <a href="">
-            <img src="./images/project-1.jpg" alt="Веб-сайт Технокряк">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-2.jpg" alt="Дизайн постера">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-3.jpg" alt="Приложение для ресторана">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-4.jpg" alt="Маркетинговый проект">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-5.jpg" alt="Приложение для компании картонных коробок">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-6.jpg" alt="Веб-сай о вдохновении">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-7.jpg" alt="Дизайн для лимитированного издания">
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-8.jpg" alt="Маркетинговый проект ЛАБ">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project-9.jpg" alt="Приложение для растущего бизнеса">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-      </ul>
+        <ul class="filters">
+          <li><button class="filters-list filters-active" type="button">Все</button></li>
+          <li><button class="filters-list" type="button">Веб-сайты</button></li>
+          <li><button class="filters-list" type="button">Приложения</button></li>
+          <li><button class="filters-list" type="button">Дизайн</button></li>
+          <li><button class="filters-list" type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="projects">
+          <li class="projects-list">
+            <a href="">
+              <img src="./images/project-1.jpg" alt="Веб-сайт Технокряк" />
+              <h2 class="projects-name link">Технокряк</h2>
+              <p class="projects-view link">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img src="./images/project-2.jpg" alt="Дизайн постера" />
+              <h2 class="projects-name link">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-view link">Дизайн</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img
+                src="./images/project-3.jpg"
+                alt="Приложение для ресторана"
+              />
+              <h2 class="projects-name link">Ресторан Seafood</h2>
+              <p class="projects-view link">Приложение</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img src="./images/project-4.jpg" alt="Маркетинговый проект" />
+              <h2 class="projects-name link">Проект Prime</h2>
+              <p class="projects-view link">Маркетинг</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img
+                src="./images/project-5.jpg"
+                alt="Приложение для компании картонных коробок"
+              />
+              <h2 class="projects-name link">Проект Boxes</h2>
+              <p class="projects-view link">Приложение</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img src="./images/project-6.jpg" alt="Веб-сай о вдохновении" />
+              <h2 class="projects-name link">Inspiration has no Borders</h2>
+              <p class="projects-view link">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img
+                src="./images/project-7.jpg"
+                alt="Дизайн для лимитированного издания"
+              />
+              <h2 class="projects-name link">Издание Limited Edition</h2>
+               <p class="projects-view link">Дизайн</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img
+                src="./images/project-8.jpg"
+                alt="Маркетинговый проект ЛАБ"
+              />
+              <h2 class="projects-name link">Проект LAB</h2>
+              <p class="projects-view link">Маркетинг</p>
+            </a>
+          </li>
+          <li class="projects-list">
+            <a href="">
+              <img
+                src="./images/project-9.jpg"
+                alt="Приложение для растущего бизнеса"
+              />
+              <h2 class="projects-name link">Growing Business</h2>
+              <p class="projects-view link">Приложение</p>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <!--Подвал-->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a class="logo link" href="./index.html" lang="en"
+        >Web<span class="logo-white">Studio</span></a
+      >
+      <address class="adress">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:380991112233">+38(099) 111-22-33</a></li>
+          <li>
+            <a class="contacts-link link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts-link link" href="tel:380991112233"
+              >+38 (099) 111-22-33</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
