Доделано карточки в Галереи

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -163,20 +164,17 @@
     <!--Подвал-->
     <footer class="footer">
       <a class="logo link" href="./index.html" lang="en"
-        >Web<span class="logo-white">Studio</span></a
-      >
+        >Web<span class="logo-white">Studio</span></a>
       <address class="adress">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
-            <a class="contacts-link link" href="mailto:info@example.com"
-              >info@example.com</a
-            >
+            <a class="contacts-footer link" href="mailto:info@example.com"
+              >info@example.com</a>
           </li>
           <li>
-            <a class="contacts-link link" href="tel:380991112233"
-              >+38 (099) 111-22-33</a
-            >
+            <a class="contacts-footer link" href="tel:380991112233"
+              >+38 (099) 111-22-33</a>
           </li>
         </ul>
       </address>
