--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,10 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -21,7 +23,9 @@
       <nav>
         <ul class="list">
           <li><a class="menu link" href="./index.html">Студия</a></li>
-          <li><a class="menu link active" href="./portfolio.html">Портфолио</a></li>
+          <li>
+            <a class="menu link active" href="./portfolio.html">Портфолио</a>
+          </li>
           <li><a class="menu link" href="">Контакты</a></li>
         </ul>
       </nav>
@@ -44,29 +48,37 @@
       <h1 class="visually-hidden">Галерея</h1>
       <section>
         <ul class="filters">
-          <li><button class="filters-list filters-active" type="button">Все</button></li>
+          <li>
+            <button class="filters-list filters-active" type="button">
+              Все
+            </button>
+          </li>
           <li><button class="filters-list" type="button">Веб-сайты</button></li>
-          <li><button class="filters-list" type="button">Приложения</button></li>
+          <li>
+            <button class="filters-list" type="button">Приложения</button>
+          </li>
           <li><button class="filters-list" type="button">Дизайн</button></li>
           <li><button class="filters-list" type="button">Маркетинг</button></li>
         </ul>
         <ul class="projects">
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img src="./images/project-1.jpg" alt="Веб-сайт Технокряк" />
               <h2 class="projects-name link">Технокряк</h2>
               <p class="projects-view link">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img src="./images/project-2.jpg" alt="Дизайн постера" />
-              <h2 class="projects-name link">Постер New Orlean vs Golden Star</h2>
+              <h2 class="projects-name link">
+                Постер New Orlean vs Golden Star
+              </h2>
               <p class="projects-view link">Дизайн</p>
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img
                 src="./images/project-3.jpg"
                 alt="Приложение для ресторана"
@@ -76,14 +88,14 @@
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img src="./images/project-4.jpg" alt="Маркетинговый проект" />
               <h2 class="projects-name link">Проект Prime</h2>
               <p class="projects-view link">Маркетинг</p>
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img
                 src="./images/project-5.jpg"
                 alt="Приложение для компании картонных коробок"
@@ -93,24 +105,24 @@
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img src="./images/project-6.jpg" alt="Веб-сай о вдохновении" />
               <h2 class="projects-name link">Inspiration has no Borders</h2>
               <p class="projects-view link">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img
                 src="./images/project-7.jpg"
                 alt="Дизайн для лимитированного издания"
               />
               <h2 class="projects-name link">Издание Limited Edition</h2>
-               <p class="projects-view link">Дизайн</p>
+              <p class="projects-view link">Дизайн</p>
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img
                 src="./images/project-8.jpg"
                 alt="Маркетинговый проект ЛАБ"
@@ -120,7 +132,7 @@
             </a>
           </li>
           <li class="projects-list">
-            <a href="">
+            <a class="projects-link" href="">
               <img
                 src="./images/project-9.jpg"
                 alt="Приложение для растущего бизнеса"
@@ -141,12 +153,12 @@
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
-            <a class="contacts-link link" href="mailto:info@example.com"
+            <a class="contacts-footer link" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
           <li>
-            <a class="contacts-link link" href="tel:380991112233"
+            <a class="contacts-footer link" href="tel:380991112233"
               >+38 (099) 111-22-33</a
             >
           </li>
