Добавила стиль на курсор для кнопки

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,17 +64,17 @@
           <li class="projects-list">
             <a class="projects-link" href="">
               <img src="./images/project-1.jpg" alt="Веб-сайт Технокряк" />
-              <h2 class="projects-name link">Технокряк</h2>
-              <p class="projects-view link">Веб-сайт</p>
+              <h2 class="projects-name">Технокряк</h2>
+              <p class="projects-view">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
               <img src="./images/project-2.jpg" alt="Дизайн постера" />
-              <h2 class="projects-name link">
+              <h2 class="projects-name">
                 Постер New Orlean vs Golden Star
               </h2>
-              <p class="projects-view link">Дизайн</p>
+              <p class="projects-view">Дизайн</p>
             </a>
           </li>
           <li class="projects-list">
@@ -83,15 +83,15 @@
                 src="./images/project-3.jpg"
                 alt="Приложение для ресторана"
               />
-              <h2 class="projects-name link">Ресторан Seafood</h2>
-              <p class="projects-view link">Приложение</p>
+              <h2 class="projects-name">Ресторан Seafood</h2>
+              <p class="projects-view">Приложение</p>
             </a>
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
               <img src="./images/project-4.jpg" alt="Маркетинговый проект" />
-              <h2 class="projects-name link">Проект Prime</h2>
-              <p class="projects-view link">Маркетинг</p>
+              <h2 class="projects-name">Проект Prime</h2>
+              <p class="projects-view">Маркетинг</p>
             </a>
           </li>
           <li class="projects-list">
@@ -100,15 +100,15 @@
                 src="./images/project-5.jpg"
                 alt="Приложение для компании картонных коробок"
               />
-              <h2 class="projects-name link">Проект Boxes</h2>
-              <p class="projects-view link">Приложение</p>
+              <h2 class="projects-name">Проект Boxes</h2>
+              <p class="projects-view">Приложение</p>
             </a>
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
               <img src="./images/project-6.jpg" alt="Веб-сай о вдохновении" />
-              <h2 class="projects-name link">Inspiration has no Borders</h2>
-              <p class="projects-view link">Веб-сайт</p>
+              <h2 class="projects-name">Inspiration has no Borders</h2>
+              <p class="projects-view">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-list">
@@ -117,8 +117,8 @@
                 src="./images/project-7.jpg"
                 alt="Дизайн для лимитированного издания"
               />
-              <h2 class="projects-name link">Издание Limited Edition</h2>
-              <p class="projects-view link">Дизайн</p>
+              <h2 class="projects-name">Издание Limited Edition</h2>
+              <p class="projects-view">Дизайн</p>
             </a>
           </li>
           <li class="projects-list">
@@ -127,8 +127,8 @@
                 src="./images/project-8.jpg"
                 alt="Маркетинговый проект ЛАБ"
               />
-              <h2 class="projects-name link">Проект LAB</h2>
-              <p class="projects-view link">Маркетинг</p>
+              <h2 class="projects-name">Проект LAB</h2>
+              <p class="projects-view">Маркетинг</p>
             </a>
           </li>
           <li class="projects-list">
@@ -137,8 +137,8 @@
                 src="./images/project-9.jpg"
                 alt="Приложение для растущего бизнеса"
               />
-              <h2 class="projects-name link">Growing Business</h2>
-              <p class="projects-view link">Приложение</p>
+              <h2 class="projects-name">Growing Business</h2>
+              <p class="projects-view">Приложение</p>
             </a>
           </li>
         </ul>
