Убрала свечение карточек

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,9 +71,7 @@
           <li class="projects-list">
             <a class="projects-link" href="">
               <img src="./images/project-2.jpg" alt="Дизайн постера" />
-              <h2 class="projects-name">
-                Постер New Orlean vs Golden Star
-              </h2>
+              <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
               <p class="projects-view">Дизайн</p>
             </a>
           </li>
