--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--Шапка-->
     <header class="header">
-      <a class="logo link shadow" href="./index.html" lang="en"
+      <a class="logo link" href="./index.html" lang="en"
         >Web<span class="logo-dark">Studio</span></a
       >
       <nav>
