--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   <body>
     <!--Шапка-->
     <header class="header">
-      <a class="logo link shadow" href="./index.html" lang="en"
+      <a class="logo link" href="./index.html" lang="en"
         >Web<span class="logo-dark">Studio</span></a
       >
       <nav>
@@ -63,14 +63,24 @@
         <ul class="projects">
           <li class="projects-list">
             <a class="projects-link" href="">
-              <img src="./images/project-1.jpg" alt="Веб-сайт Технокряк" />
+              <img
+                src="./images/project-1.jpg"
+                alt="Веб-сайт Технокряк"
+                width="370px"
+                height="294px"
+              />
               <h2 class="projects-name">Технокряк</h2>
               <p class="projects-view">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
-              <img src="./images/project-2.jpg" alt="Дизайн постера" />
+              <img
+                src="./images/project-2.jpg"
+                alt="Дизайн постера"
+                width="370px"
+                height="294px"
+              />
               <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
               <p class="projects-view">Дизайн</p>
             </a>
@@ -80,6 +90,8 @@
               <img
                 src="./images/project-3.jpg"
                 alt="Приложение для ресторана"
+                width="370px"
+                height="294px"
               />
               <h2 class="projects-name">Ресторан Seafood</h2>
               <p class="projects-view">Приложение</p>
@@ -87,7 +99,12 @@
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
-              <img src="./images/project-4.jpg" alt="Маркетинговый проект" />
+              <img
+                src="./images/project-4.jpg"
+                alt="Маркетинговый проект"
+                width="370px"
+                height="294px"
+              />
               <h2 class="projects-name">Проект Prime</h2>
               <p class="projects-view">Маркетинг</p>
             </a>
@@ -97,6 +114,8 @@
               <img
                 src="./images/project-5.jpg"
                 alt="Приложение для компании картонных коробок"
+                width="370px"
+                height="294px"
               />
               <h2 class="projects-name">Проект Boxes</h2>
               <p class="projects-view">Приложение</p>
@@ -104,7 +123,12 @@
           </li>
           <li class="projects-list">
             <a class="projects-link" href="">
-              <img src="./images/project-6.jpg" alt="Веб-сай о вдохновении" />
+              <img
+                src="./images/project-6.jpg"
+                alt="Веб-сай о вдохновении"
+                width="370px"
+                height="294px"
+              />
               <h2 class="projects-name">Inspiration has no Borders</h2>
               <p class="projects-view">Веб-сайт</p>
             </a>
@@ -114,6 +138,8 @@
               <img
                 src="./images/project-7.jpg"
                 alt="Дизайн для лимитированного издания"
+                width="370px"
+                height="294px"
               />
               <h2 class="projects-name">Издание Limited Edition</h2>
               <p class="projects-view">Дизайн</p>
@@ -124,6 +150,8 @@
               <img
                 src="./images/project-8.jpg"
                 alt="Маркетинговый проект ЛАБ"
+                width="370px"
+                height="294px"
               />
               <h2 class="projects-name">Проект LAB</h2>
               <p class="projects-view">Маркетинг</p>
@@ -134,6 +162,8 @@
               <img
                 src="./images/project-9.jpg"
                 alt="Приложение для растущего бизнеса"
+                width="370px"
+                height="294px"
               />
               <h2 class="projects-name">Growing Business</h2>
               <p class="projects-view">Приложение</p>
